--- a/test_page_html.html
+++ b/test_page_html.html
@@ -1,16 +1,10 @@
 <h1>Commande de la bar LED</h1>
 <form method="post" href=this.value>
    <p>
-       <label for="pays">Dans quel pays habitez-vous ?</label><br />
+       <label for="pays">choix effets</label><br />
        <select name="pays" id="pays">
-           <option value="france">France</option>
-           <option value="espagne">Espagne</option>
-           <option value="italie">Italie</option>
-           <option value="royaume-uni">Royaume-Uni</option>
-           <option value="canada">Canada</option>
-           <option value="etats-unis">États-Unis</option>
-           <option value="chine">Chine</option>
-           <option value="japon">Japon</option>
+           <option value=\"Test1\">Test1</option>
+           <option value=\"Test2\">Test2</option>
        </select>
    </p>
 </form>
